fix overflow x

--- a/responsive.css
+++ b/responsive.css
@@ -86,7 +86,7 @@
     color: rgb(28, 118, 253);
   }
   .nav-side-submenu {
-    z-index: 101; 
+    z-index: 101;
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -94,14 +94,14 @@
     width: 100%;
     height: 100vh;
     padding: 0 0 0 10px;
-    transform: translateX(100%);
+    transform: translateX(-100%);
     transition: ease-in 0.3s;
   }
   .nav-side-submenu .submenu {
     width: 100%;
     height: 100%;
     position: absolute;
-    transform: translateX(100%);
+    transform: translateX(-100%);
     transition: ease-in 0.4s;
   }
   .nav-side-submenu .submenu i {
@@ -224,14 +224,14 @@
     height: 100vh;
     background-color: white;
     padding: 0 0 0 10px;
-    transform: translateX(100%);
+    transform: translateX(-100%);
     transition: ease-in 0.3s;
   }
   .nav-side-submenu .submenu {
     width: 100%;
     height: 100%;
     position: absolute;
-    transform: translateX(100%);
+    transform: translateX(-100%);
     transition: ease-in 0.4s;
   }
   .nav-side-submenu .submenu i {
